@@ -1,3 +1,7 @@
+2004-01-24  Shiro Kawai  <shiro@acm.org>
+
+	* src/kahua/user.scm (kahua-user-password-change): added.
+
 2004-01-23  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua-spvr.in (main): fixed a bug that kahua-spvr removes
